Production-ready: Lavender Hill Springs coffee roastery with full e-commerce functionality

--- a/apps/medusa/package.json
+++ b/apps/medusa/package.json
@@ -32,19 +32,22 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@lambdacurry/medusa-product-reviews": "1.2.0",
+    "@lambdacurry/medusa-product-reviews": "^1.2.1",
     "@medusajs/admin-sdk": "2.7.0",
     "@medusajs/cli": "2.7.0",
     "@medusajs/framework": "2.7.0",
-    "@medusajs/js-sdk": "2.7.0",
+    "@medusajs/js-sdk": "2.8.7",
     "@medusajs/medusa": "2.7.0",
-    "@medusajs/types": "2.7.0",
+    "@medusajs/types": "2.8.7",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
+    "ajv": "^8.17.1",
     "awilix": "^8.0.1",
-    "pg": "^8.13.0"
+    "medusa-source-shopify": "^1.2.10",
+    "pg": "^8.13.0",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@medusajs/test-utils": "2.7.0",
