--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
   "version": 2,
-  "buildCommand": "yarn install && cd apps/storefront && yarn build",
-  "outputDirectory": "apps/storefront/build/client",
-  "framework": null,
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "buildCommand": "echo 'No build needed - static files'",
+  "outputDirectory": "static-site"
 }
