RAILWAY FIX: Improve startup reliability and deployment configuration
🔧 Fixed Railway Issues:
- Replace shell script with reliable yarn commands
- Use yarn railway:start for proper initialization sequence
- Ensure migrations run before server start
- Use yarn start:prod for production environment
- Remove dependency on shell script execution permissions

✅ Railway Configuration Now:
- Migrations run automatically on deploy
- Database seeding handled gracefully
- Health checks properly configured
- More reliable startup process

🎯 Ready for stable Railway deployment

--- a/apps/medusa/package.json
+++ b/apps/medusa/package.json
@@ -21,6 +21,7 @@
     "sync": "medusa db:sync-links",
     "migrate:prod": "medusa db:migrate",
     "start:prod": "medusa start",
+    "railway:start": "yarn migrate:prod && yarn seed:prod && yarn start:prod",
     "seed:prod": "medusa exec ./src/scripts/seed.js && yarn add-user:prod",
     "add-user:prod": "medusa user --email admin@medusa-test.com --password supersecret && medusa user --email admin@lambdacurry.dev --password password",
     "migrate": "medusa db:migrate",
